--- a/app/views/authentication/new.html.erb
+++ b/app/views/authentication/new.html.erb
@@ -1,25 +1,32 @@
-Sign In
+<div class="page-header">
+  <h2>Sign In Form</h2>
+</div>
 
-<%= form_tag sign_in_path do %>
-
-  <%= label_tag :first_name %>
-  <%= text_field_tag :first_name %>
-  <br>
-  <%= label_tag :last_name %>
-  <%= text_field_tag :last_name %>
-  <br>
-  <%= label_tag :date_of_birth %>
-  <%= text_field_tag :date_of_birth %>
-  <br>
-  <%= label_tag :email %>
-  <%= email_field_tag :email %>
-  <br>
-  <%= label_tag :password %>
-  <%= password_field_tag :password %>
-  <br>
-  <%= label_tag :password_confirmation %>
-  <%= password_field_tag :password_confirmation %>
-  <br>
-  <%= f.submit_tag "Sign In" %>
-
-<% end %>
+<form class="form-horizontal">
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+    <div class="col-sm-6">
+      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+    <div class="col-sm-6">
+      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-6">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox"> Remember me
+        </label>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Sign in</button>
+    </div>
+  </div>
+</form>
