render partial for share message

--- a/app/views/life_ventures/_form.html.haml
+++ b/app/views/life_ventures/_form.html.haml
@@ -1,4 +1,7 @@
 = form_for @life_venture, html: {class: "form-horizontal"} do |f|
+
+  = render partial: "/shared/errors", locals:{object: @life_venture}
+
   = f.label :name
   = f.text_field :name
   %br
