--- a/app/views/life_ventures/index.html.haml
+++ b/app/views/life_ventures/index.html.haml
@@ -8,9 +8,11 @@
   %table
     %thead
     %tr
-      %th Name
-      %th Category
-    &tbody
+      %th.col-md-4 Name
+      %th.col-md-4 Category
+      %th.col-md-4 # of Reasons
+    %tbody
     %tr
-      %td=link_to life_venture.name, life_venture_path(life_venture)
-      %td=life_venture.category
+      %td.col-md-4=link_to life_venture.name, life_venture_path(life_venture)
+      %td.col-md-4=life_venture.category
+      %td.col-md-4=link_to life_venture.reasons.count, life_venture_reason_path(life_venture)
