--- a/app/views/life_ventures/show.html.haml
+++ b/app/views/life_ventures/show.html.haml
@@ -1,16 +1,16 @@
 .page-header
   .pull-right
     = link_to 'Edit Venture', edit_life_venture_path(@life_venture), class: "btn btn-info"
+    =link_to "New Reason", new_life_venture_reason_path(@life_venture), class: "btn btn-success"
   %h1 Life Ventures
 
 %table
   %thead
-  %tr
-    %th Name
-    %th Category
-    %th
+    %tr
+      %th Name
+      %th Category
   %tbody
-  %tr
-    %td= @life_venture.name
-    %td= @life_venture.category
-    %td.pull-right=link_to "New Reason", new_life_venture_reason_path(@life_venture), class: "btn btn-success"
+    -@life_venture.reasons.each do |reason|
+      %tr
+        %td= reason.name
+        %td= reason.priority
