--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,4 +1,9 @@
-Welcome!
+.page-header
+  .pull-right
+    = link_to 'New Venture', new_life_venture_path, class: "btn btn-success"
+  %h1 Welcome!
 
-.btn.btn-success
-  = link_to "New Venture", new_life_venture_path
+%body
+  .pull-right
+  %br Create a new venture to get started now
+  = link_to 'Your Ventures', life_ventures_path, class: "btn btn-success"
