Create Goal Crud pages

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,6 +29,10 @@
       %p.alert.alert-success
         = flash[:notice]
 
+    - if flash[:error]
+      %p.alert.alert-danger
+        = flash[:error]
+
     = yield
 
     %footer
