Change from goals to steps

--- a/app/views/life_ventures/index.html.haml
+++ b/app/views/life_ventures/index.html.haml
@@ -17,3 +17,4 @@
       %td.col-md-4=link_to life_venture.name, life_venture_path(life_venture)
       %td.col-md-4=life_venture.category
       %td.col-md-4=link_to life_venture.reasons.count, life_venture_reasons_path(life_venture)
+      %td.col-md-4=link_to life_venture.steps.count, life_venture_steps_path(life_venture)
