Update steps CRUD pages

--- a/app/views/steps/edit.html.haml
+++ b/app/views/steps/edit.html.haml
@@ -1,6 +1,6 @@
 .page-header
   .pull-right
-    = link_to 'Edit Step', edit_life_venture_step_path(@life_venture), class: "btn btn-info"
+    = link_to 'Edit Step', edit_life_venture_step_path(@life_venture, @step), class: "btn btn-info"
   %h1 Step
 
   =render "form"
