--- a/app/views/reasons/show.html.haml
+++ b/app/views/reasons/show.html.haml
@@ -1,4 +1,4 @@
 .page-header
   .pull-right
-    = link_to 'Edit Reason', edit_life_venture_reason_path(@life_venture), class: "btn btn-info"
+    = link_to 'Edit Reason', edit_life_venture_reason_path(@life_venture, @reason), class: "btn btn-info"
   %h1 Reason
