--- a/app/views/reasons/show.html.haml
+++ b/app/views/reasons/show.html.haml
@@ -2,3 +2,5 @@
   .pull-right
     = link_to 'Edit Reason', edit_life_venture_reason_path(@life_venture, @reason), class: "btn btn-info"
   %h1 Reason
+
+= @reason.name
