--- a/app/views/steps/show.html.haml
+++ b/app/views/steps/show.html.haml
@@ -2,3 +2,5 @@
   .pull-right
     = link_to 'Edit Step', edit_life_venture_step_path(@life_venture, @step), class: "btn btn-info"
   %h1 Step
+
+= @step.name
