--- a/app/views/reasons/index.html.haml
+++ b/app/views/reasons/index.html.haml
@@ -11,6 +11,6 @@
 - @reasons.each do |reason|
 
   %tr
-    %td= reason.name
+    %td= link_to reason.name, life_venture_reason_path(@life_venture, reason)
     %td= reason.priority
     %br
