--- a/app/views/steps/index.html.haml
+++ b/app/views/steps/index.html.haml
@@ -12,7 +12,13 @@
 - @steps.each do |step|
 
   %tr
-    %td= step.name
+    %td= link_to step.name, life_venture_step_path(@life_venture, step)
     %td= step.due_date
-    %td progess bar to come
+    %td.progress
+      .progress-bar.progress-bar-success#width: 35%
+      %span.sr-only 35% Complete (success)
+      .progress-bar.progress-bar-warning.progress-bar-striped, style="width: 20%
+      %span.sr-only 20% Complete (warning)
+      .progress-bar.progress-bar-danger, style="width: 10%
+      %span.sr-only 10% Complete (danger)
     %br
