--- a/app/views/reasons/_form.html.haml
+++ b/app/views/reasons/_form.html.haml
@@ -1,9 +1,16 @@
 = form_for [@life_venture, @reason], html: {class: "form-horizontal"} do |f|
   = render partial: "/shared/errors", locals:{object: @reason}
-  = f.label :name
-  = f.text_field :name
-  %br
-  = f.label :priority
-  = f.number_field :priority
-  %br
-  = f.submit
+
+  .row
+    .well.col-md-offset-2.col-md-8
+      .form-group
+        = f.label :name, class:"col-md-4 control-label"
+        .col-md-8
+          = f.text_field :name, class: "form-control"
+      .form-group
+        = f.label :priority, class:"col-md-4 control-label"
+        .col-md-4
+          = f.collection_select(:priority, Reason.priorities.keys, :to_s, :to_s, {}, {class: "form-control"})
+      .form-group
+        .col-md-offset-4.col-md-4
+          = f.submit class: "btn btn-success form-control"
