--- a/app/views/life_ventures/show.html.haml
+++ b/app/views/life_ventures/show.html.haml
@@ -1,14 +1,17 @@
 .page-header
   .pull-right
     = link_to 'Edit Venture', edit_life_venture_path(@life_venture), class: "btn btn-info"
-  %h1 Life Ventures
 
-%table
+
+%table.footable
   %thead
     %tr
-      %th Name
-      %th Category
+      %th{"colspan" => "4"}
+        %h1= @life_venture.name
+
   %tbody
     %tr
       %td= @life_venture.name
       %td= @life_venture.category
+      %td= link_to @life_venture.reasons.count, life_venture_reasons_path(@life_venture)
+      %td= link_to @life_venture.steps.count, life_venture_steps_path(@life_venture)
