--- a/app/views/life_ventures/index.html.haml
+++ b/app/views/life_ventures/index.html.haml
@@ -3,18 +3,21 @@
     = link_to 'New Venture', new_life_venture_path, class: "btn btn-success"
   %h1 Life Ventures
 
-%table.table.table-striped
-  %thead
-    %tr
-      %th.col-md-4 Name
-      %th.col-md-4 Category
-      %th.col-md-3 # of Reasons
-      %th.col-md-3 # of Steps
 
-  %tbody
-    -@life_ventures.each do |life_venture|
-      %tr
-        %td.col-md-4= link_to life_venture.name, life_venture_path(life_venture)
-        %td.col-md-4= life_venture.category
-        %td.col-md-3= link_to life_venture.reasons.count, life_venture_reasons_path(life_venture)
-        %td.col-md-3= link_to life_venture.steps.count, life_venture_steps_path(life_venture)
+#page-wrap
+  -@life_ventures.each do |life_venture|
+    .info-col
+      %h4=link_to life_venture.name, life_venture_path(life_venture)
+      %dl
+        %dt Reasons
+        %dd
+          - life_venture.reasons.each do |reason|
+            %p= reason.name
+
+        %dt Steps
+        -life_venture.steps.each do |step|
+          %dd= step.name
+
+        %dt Obstacles
+        -life_venture.obstacles.each do |obstacle|
+          %dd= obstacle.name
