--- a/app/views/steps/edit.html.haml
+++ b/app/views/steps/edit.html.haml
@@ -1,6 +1,13 @@
 .page-header
   .pull-right
-    = link_to 'Edit Step', edit_life_venture_step_path(@life_venture, @step), class: "btn btn-info"
+    = link_to 'Delete', life_venture_steps_path, method: :delete, class: "btn btn-danger"
   %h1 Step
+
+%ol.breadcrumb
+  %li= link_to "Life Ventures", life_ventures_path
+  %li= link_to @life_venture.name, life_venture_path(@life_venture)
+  %li= link_to @step.name, life_venture_path(@life_venture, @step)
+  %li Edit
+
 
   =render "form"
