--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,20 +5,34 @@
   = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
+  :javascript
+    $(function(){
+      $('.footable').footable();
+    });
+
+
+
 
 %body
-  %nav.navbar.navbar-inverse.navbar-fixed-top
+  %nav.navbar.navbar-default.navbar-fixed-top
     .container
       .navbar-header
         = link_to "Why", root_path, class: "navbar-brand"
-      .collapse.navbar-collapse
-        %ul.nav.navbar-nav.navbar-right
-          - if current_user
-            %li= link_to current_user.full_name, user_path(current_user)
-            %li= link_to "Sign Out", sign_out_path
-          - else
-            %li= link_to "Sign Up", sign_up_path
-            %li= link_to "Sign In", sign_in_path
+      %ul.nav.navbar-nav.navbar-center
+        %li= link_to "Purpose", purpose_path
+        -if current_user
+          %ul.nav.navbar-nav.navbar-center
+            %li= link_to "Solve Obstacles", all_obstacles_path
+        -else
+          %li
+      %ul.nav.navbar-nav.navbar-right
+        - if current_user
+          %li= link_to current_user.full_name, user_path(current_user)
+          %li= link_to "Sign Out", sign_out_path
+        - else
+          %li= link_to "Sign Up", sign_up_path
+          %li= link_to "Sign In", sign_in_path
+  %br
   %br
   %br
   %br
@@ -35,7 +49,16 @@
 
     = yield
 
+
+
     %footer
       %hr
-      = link_to "Life Ventures", life_ventures_path
-      | Copyright @ Why, Inc. 2015
+        %font{"color" => "#CCCC00"}
+          = link_to "Life Ventures", life_ventures_path
+          |
+          = link_to "Purpose", purpose_path
+          -if current_user
+            |
+            = link_to "Solve Obstacles", all_obstacles_path
+          .pull-right
+            Copyright @ Why is the Way 2015
