--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -5,20 +5,14 @@
 */
 
 * { margin: 0; padding: 0; }
-html, body { height: 100%; overflow: hidden; background: #eee; }
+html, body { height: 100%; overflow: auto; background: #eee; }
 body { font: 14px Georgia, serif; }
-#page-wrap { width: 960px; padding: 0 0 0 15px; margin-left: auto; margin-right: auto; overflow: hidden; height: 100%; }
+#page-wrap { width: 960px; padding: 0 0 0 15px; margin-left: auto; margin-right: auto; overflow: auto; height: 100%; }
 
 .info-col { float: left; width: 132px; height: 100%; padding: 50px 0 0 0; }
 .info-col h4 { text-align: center; font-weight: normal; height: 90px; padding: 25px 0; }
 
 .image { height: 100px; text-indent: -9999px; display: block; border-right: 1px solid white; }
-
-.batman { background: url(../images/batman.jpg) center center no-repeat; }
-.spiderman { background: url(../images/spiderman.jpg) center center no-repeat; }
-.aquaman { background: url(../images/aquaman.jpg) center center no-repeat; }
-.ironman { background: url(../images/ironman.jpg) center center no-repeat; }
-.superman { background: url(../images/superman.jpg) center center no-repeat; }
 
 dt { padding: 5px; background: #900; color: white; border-bottom: 1px solid white; border-right: 1px solid white; }
 dd { position: absolute; left: -9999px; top: -9999px; width: 299px; background: #900; padding: 10px; color: white; border-right: 1px solid white; }
