--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -1,23 +1,32 @@
-Sign Up Form
+.row
+  .well.col-md-offset-3.col-md-6
+    .form-group.page-header
+      %h1 Sign up - Why is the Way
 
-= form_for @user, url: sign_up_path do |f|
+      - if @user.errors.any?
+        .text-danger
+          -@user.errors.full_messages.each do |message|
+            = message
 
-  = f.label :first_name
-  = f.text_field :first_name
-  %br
-  = f.label :last_name
-  = f.text_field :last_name
-  %br
-  = f.label :date_of_birth
-  = f.text_field :date_of_birth, placeholder: "mm/dd/yyyy"
-  %br
-  = f.label :email
-  = f.email_field :email
-  %br
-  = f.label :password
-  = f.password_field :password
-  %br
-  = f.label :password_confirmation
-  = f.password_field :password_confirmation
-  %br
-  = f.submit "Create Account"
+    = form_for @user, url: sign_up_path do |f|
+
+      .form-group
+        = f.label :first_name, class: 'control-label'
+        = f.text_field :first_name, class: 'form-control'
+      .form-group
+        = f.label :last_name, class: 'control-label'
+        = f.text_field :last_name, class: 'form-control'
+      .form-group
+        = f.label :date_of_birth, class: 'control-label'
+        = f.text_field :date_of_birth, placeholder: "mm/dd/yyyy", class: 'form-control'
+      .form-group
+        = f.label :email, class: 'control-label'
+        = f.email_field :email, class: 'form-control'
+      .form-group
+        = f.label :password, class: 'control-label'
+        = f.password_field :password, class: 'form-control'
+      .form-group
+        = f.label :password_confirmation, class: 'control-label'
+        = f.password_field :password_confirmation, class: 'form-control'
+      .form-group
+        = f.submit "Create Account", class: 'btn btn-primary'
