--- a/app/views/life_ventures/edit.html.haml
+++ b/app/views/life_ventures/edit.html.haml
@@ -1,4 +1,5 @@
 .page-header
+  = link_to "Delete", life_venture_path(@life_venture), method: :delete, class: "btn btn-danger pull-right"
   %h1 Edit Life Venture
 
 = render "form"
